[gd_scene load_steps=4 format=2]

[ext_resource path="res://Board.gd" type="Script" id=1]
[ext_resource path="res://Map/Map.tscn" type="PackedScene" id=2]
[ext_resource path="res://Map/Map.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ButtonInstructionReset" type="Button" parent="."]
margin_left = 30.0
margin_top = 26.0
margin_right = 230.0
margin_bottom = 66.0
text = "Instruction Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonInstructionNextTurn" type="Button" parent="."]
margin_left = 30.0
margin_top = 83.0
margin_right = 230.0
margin_bottom = 123.0
text = "Instructions Next Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMapReset" type="Button" parent="."]
margin_left = 30.0
margin_top = 156.0
margin_right = 230.0
margin_bottom = 196.0
text = "Maps Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMapSetPlayerNames" type="Button" parent="."]
margin_left = 30.0
margin_top = 228.0
margin_right = 230.0
margin_bottom = 268.0
text = "Map Set Player Names"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map1" parent="." instance=ExtResource( 2 )]
position = Vector2( 430, 585 )

[node name="Map2" parent="." instance=ExtResource( 2 )]
position = Vector2( 802, 572 )

[node name="Map3" parent="." instance=ExtResource( 2 )]
position = Vector2( 1153, 573 )
script = ExtResource( 3 )

[connection signal="pressed" from="ButtonInstructionReset" to="." method="_on_ButtonInstructionReset_pressed"]
[connection signal="pressed" from="ButtonInstructionNextTurn" to="." method="_on_ButtonInstructionNextTurn_pressed"]
[connection signal="pressed" from="ButtonMapReset" to="." method="_on_ButtonMapReset_pressed"]
[connection signal="pressed" from="ButtonMapSetPlayerNames" to="." method="_on_ButtonMapSetPlayerNames_pressed"]
